--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+::root {
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +7,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  --main-color: #C5C3C6;
+  --gas-container-color: #46494C;
+  --balance-container-color: #4C5C68;
+  --price-container-color: #DCDCDD;
+  --transaction-container-color: #1985A1;
 }
 
 code {
@@ -23,9 +30,8 @@ ul, li, button, input {
 .dashboard {
   max-width: 45rem;
   height: 25rem;
-  background-color: rgb(170, 170, 170);
+  background-color: var(--main-color);
   margin-inline:auto auto;
-  margin-top: 10rem;
 
   padding: 1.5rem;
   border-radius: 15px;
@@ -36,6 +42,7 @@ ul, li, button, input {
     "price price balance"
     "gas transactions transactions";
   grid-template-rows: 50% 50%;
+  box-shadow: 0px 0px 5px -2px black;
 }
 
 .container {
@@ -49,14 +56,14 @@ ul, li, button, input {
 
 .price-container {
   display:block;
-  background-color: rgb(225, 225, 255);
+  background-color: var(--price-container-color);
 
   grid-column-start: 1;
   grid-column-end:  3;
 }
 
 .gas-container {
-  background-color: rgb(200, 200, 200);
+  background-color: var(--gas-container-color);
 
   grid-column-start: 1;
   grid-column-end:   2;
@@ -79,6 +86,7 @@ ul, li, button, input {
 
   justify-content: space-between;
   margin-top: 2rem;
+  font-weight: 600;
 }
 
 .gas-prices {
@@ -117,7 +125,7 @@ ul, li, button, input {
 }
 
 .balance-container {
-  background-color: rgb(100, 100, 100);
+  background-color: var(--balance-container-color);
 
   grid-column-start: 3;
   grid-column-end: 4;
@@ -128,11 +136,12 @@ ul, li, button, input {
 }
 
 .trans-container {
-  background-color: rgb(80, 80, 80);
+  background-color: var(--transaction-container-color);
 
   grid-column-start: 2;
   grid-column-end: 4;
 
+  overflow:scroll;
 }
 
 
@@ -176,8 +185,31 @@ ul, li, button, input {
   grid-template-columns: .8fr 1fr 1rem;
 }
 
-.toAddress {
+.address-container {
+  margin-top: 190px;
+  margin-left: 340px;
+  margin-bottom: 10px;
+
+  width: 45rem;
+
+  background-color: var(--main-color);
+  padding: 1rem;
+  border-radius: 10px;
+  box-shadow: 0px 0px 5px -2px black;
+
+  display:flex;
+  justify-content: space-between;
 }
 
-.txValue {
+input {
+  border: none;
+  background-color: var(--main-color);
+}
+
+button {
+  background-color: white;
+  border: none;
+  padding-inline: 5px;
+
+  border-radius: 4px;
 }
